--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,13 @@
 {
   "devDependencies": {
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "json-server": "^0.17.0"
+  },
+  "scripts": {
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
   }
 }
